--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,12 @@
+/*
+* @Author: Zhang Guohua
+* @Date:   2018-11-21 13:12:27
+* @Last Modified by:   zgh
+* @Last Modified time: 2018-11-21 16:02:16
+* @Description: create by zgh
+* @GitHub: Savour Humor
+*/
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -25,6 +34,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- 运行配置 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -38,6 +48,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<!-- 打war包配置 -->
 			<!--<scope>provided</scope>-->
 		</dependency>
 
@@ -46,6 +57,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		
+		<!-- web 导航配置 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
