--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+# åŒ yml, ç›®å‰ç†è§£çš„é…ç½®ï¼ŒåŸºæœ¬é€šç”¨ã€‚
 
 # server
 server.port=8222
@@ -7,16 +7,16 @@ server.port=8222
 logging.path=/temp
 logging.file=my.log
 
-# ¾²Ì¬×ÊÔ´Â·¾¶ÅäÖÃ
-# Ä¬ÈÏ: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,
+# Â¾Â²ÃŒÂ¬Ã—ÃŠÃ”Â´Ã‚Â·Â¾Â¶Ã…Ã¤Ã–Ãƒ
+# Ã„Â¬ÃˆÃ: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/dist/
 
 
-# thymeleaf ÅäÖÃ
-# ²»ÆôÓÃÑÏ¸ñÅäÖÃ
+# thymeleaf Ã…Ã¤Ã–Ãƒ
+# Â²Â»Ã†Ã´Ã“ÃƒÃ‘ÃÂ¸Ã±Ã…Ã¤Ã–Ãƒ
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 
-# ÆôÓÃä¯ÀÀÆ÷¾²Ì¬×ÊÔ´»º´æ
+# Ã†Ã´Ã“ÃƒÃ¤Â¯Ã€Ã€Ã†Ã·Â¾Â²ÃŒÂ¬Ã—ÃŠÃ”Â´Â»ÂºÂ´Ã¦
 spring.resources.chain.cache=false
