--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 * @Author: Zhang Guohua
 * @Date:   2018-11-21 13:12:27
 * @Last Modified by:   zgh
-* @Last Modified time: 2018-11-21 17:52:56
+* @Last Modified time: 2018-11-22 09:23:57
 * @Description: create by zgh
 * @GitHub: Savour Humor
 */
@@ -77,19 +77,10 @@
 			</plugin>
 		</plugins>
 
-		<!-- 指定打包忽略文件 -->
-		<resources>
-			<resource>
-				<!-- 指定文件夹 -->
-				<directory>vue</directory>
-				<!-- 忽略 -->
-				<excludes>
-                    <exclude>
-						*
-					</exclude>
-                </excludes>
-			</resource>
-		</resources>
+		<!-- 指定打包忽略文件夹
+			可以直接右键，设置文件夹为 excluded.
+		 -->
+		
 	</build>
 
 
