--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,16 @@ server.port=8222
 logging.path=/temp
 logging.file=my.log
 
-# ¾²Ì¬×ÊÔ´Â·¾¶ÅäÖÃ
-# Ä¬ÈÏ: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,
+# 静态资源路径配置
+# 默认路径: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/dist/
 
 
-# thymeleaf ÅäÖÃ
-# ²»ÆôÓÃÑÏ¸ñÅäÖÃ
+# thymeleaf 模板
+# 禁用严格匹配模式
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 
-# ÆôÓÃä¯ÀÀÆ÷¾²Ì¬×ÊÔ´»º´æ
+# 配置浏览器缓存
 spring.resources.chain.cache=false
