--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			<version>1.2.35</version>
 		</dependency>
 
+		<!-- Websocket -->
+		<dependency>
+			<groupId>org.java-websocket</groupId>
+			<artifactId>Java-WebSocket</artifactId>
+			<version>1.3.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
